otisweb/static/css/otis.css
body {
	background-color: #ddeeee;
	font-family: "Open Sans", sans-serif;
}

#header {
	background-color: #5266c0;
	border: 3px solid #2233b2;
}
#main { background-color: #72fee1; }
#side { background-color: #b2fee1; }

div.entrywrap { background-color: #ffffff; }
#navigation_box { background-color: #ccccff; }

h1 {
	color: #000055;
}
#header h1 {
	color: #ffffff;
	/* font-weight: bold; */
}

h2 {
	color: #8f008f;
}

h3 {
	font-weight: normal;
	font-family: "Trebuchet MS", sans-serif;
	margin-top: 16px;
}

/* Reduce opacity effect */
#side {
    opacity: 0.9;
    filter: alpha(opacity=90);
}
#side:hover {
    opacity: 1.0;
    filter: alpha(opacity=100);
}

/* Logo in lower right */
#logo {
	text-align: right;
	padding: 14px 14px 14px 14px;
}
#logo img {
	width: 12%;
}

/* Subject colors */
tr.subjectG:nth-child(odd) { background-color: #aaffaa; }
tr.subjectC:nth-child(odd) { background-color: #aaddff; }
tr.subjectA:nth-child(odd), /* vvvv */
tr.subjectF:nth-child(odd) { background-color: #ffaaaa; }
tr.subjectN:nth-child(odd) { background-color: #eeeeee; }
tr.subjectM:nth-child(odd) { background-color: #ffee77; }

tr.subjectG:nth-child(even) { background-color: #a5f5a5; }
tr.subjectC:nth-child(even) { background-color: #a5d5f5; }
tr.subjectA:nth-child(even), /* vvvv */
tr.subjectF:nth-child(even) { background-color: #f5a5a5; }
tr.subjectN:nth-child(even) { background-color: #dddddd; }
tr.subjectM:nth-child(even) { background-color: #f5e575; }

/* Unit selection */
td.unit-select select {
	width: 180px;
	font-size: 10px;
}

/* Curriculum */
table.curriculum tr {
	height: 28px;
}
table.curriculum th, table.curriculum td {
	vertical-align: middle;
	font-size: 14px;
}

table.curriculum td.number {
	text-align: right;
	font-size: 12px;
	max-width: 30px;
}
table.curriculum td.code {
	text-align: right;
	font-size: 12px;
	font-family: Inconsolata, Consolas, monaco, monospace;
	width: 64px;
}

table.curriculum td.active {
	font-weight: 700;
	font-family: 'Trebuchet MS', sans-serif;
	font-size: 13px;
}

table.curriculum td.emojis {
	width: 150px;
	font-size: 17px;
}

#side .emoji-link {
	font-size: 20px;
}

